# libarea51-rest

./: APKBUILD  Makefile.in  configure  configure.ac  configure.lineno
include/area51/: rest.h  webserver.h
lib/: Makefile.in
lib/rest/: append_int.c  append_list.c  append_str.c
lib/rest/date/: date_iso.c  datetime_iso.c  time_hhmm.c  time_hhmmss.c
lib/rest/handler/: search_int.c  search_str.c  static.c
lib/webserver/core/: init.c  setDefaults.c  start.c  stop.c
lib/webserver/handlers/: addHandler.c  addResponseHandler.c  notFound.c  staticHandler.c
lib/webserver/response/: getResponse.c  queueResponse.c  replaceResponse.c  replaceResponseArray.c  replaceResponseByteBuffer.c  replaceResponseCharBuffer.c  sendResponse.c
